iac/demo/kyverno/demo/1.2-sample-app-invalid-image-source.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp    
  name: myapp
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: nginx
        name: nginx
status: {}
