iac/demo/kyverno/demo/1.3-sample-app-valid-image-source.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp    
  name: myapp
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: vinod827/myapp:1.0.1
        name: myapp
status: {}
