iac/demo/kyverno/demo/2.1-kyverno-clusterpolicy-mutate-label.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-app-label
spec:
  rules:
    - name: add-app-label-to-pods-deployment
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      mutate:
        patchStrategicMerge:
          metadata:
            labels: # Adds these labels if not provided
              company: "mycompany"  
              app: "Observability"
              cost: "shared-infra"
